@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-07-20T00:32:41Z",
-  "count_outdated" : 1243,
-  "uniques_outdated" : 342,
+  "timestamp" : "2024-07-27T00:33:17Z",
+  "count_outdated" : 1247,
+  "uniques_outdated" : 343,
   "count" : 1255,
   "uniques" : 347,
   "views" : [
-    {
-      "timestamp": "2024-07-12T00:00:00Z",
-      "count": 4,
-      "count_minmax": [ 4, 4 ],
-      "count_decinc": [ 0, 4 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-07-13T00:00:00Z",
       "count": 2,
