@@ -1,12 +1,7 @@
 {
-  "count": 12,
-  "uniques": 5,
+  "count": 8,
+  "uniques": 4,
   "views": [
-    {
-      "timestamp": "2024-07-12T00:00:00Z",
-      "count": 4,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-07-13T00:00:00Z",
       "count": 2,
