@@ -1,3 +1,12 @@
+2024-07-27T00:33:17Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10119335453 # 369
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-07-27
+* notice: last 14d: unq all: 4 8
+* notice: prev accum: outdated-unq outdated-all / unq all: 342 1243 / 347 1255
+* notice: next accum: outdated-unq outdated-all / unq all: 343 1247 / 347 1255
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-07-12] / []
+
 2024-07-20T00:32:41Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10016045962 # 362
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-07-20
